Rendering multiple deformation motion blur steps with "velocity" attribute is wrong and can cause memory problems #116792

Closed
opened 2024-01-04 17:15:10 +01:00 by Steffen Dünner · 7 comments

System Information
Operating system: Linux-6.5.0-14-generic-x86_64-with-glibc2.35 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.129.03

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-01-04 15:38, hash: 29ed7a69e6e3

Short description of error
Rendering point clouds with a velocity attribute now finally gives proper motion blur for particles / points.
But setting the motion blur steps > 1 causes problems like artefacts and crashes due to memory consumption.

Exact steps for others to reproduce the error

  • Open the attached blend file. It's a freeze frame of an Alembic with motion vectors on points. In the end it's a point cloud with a "velocities" attribute.
  • Press F12 to render the point cloud with motion blur. All is fine.
    image
  • Now up the "Deformation Steps" to something > 1
    image
    The rendering takes a lot longer and looks "wrong".
  • Now up the steps to e.g. 7 and re-render: crash!
**System Information** Operating system: Linux-6.5.0-14-generic-x86_64-with-glibc2.35 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.129.03 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-01-04 15:38, hash: `29ed7a69e6e3` **Short description of error** Rendering point clouds with a velocity attribute now finally gives proper motion blur for particles / points. But setting the motion blur steps > 1 causes problems like artefacts and crashes due to memory consumption. **Exact steps for others to reproduce the error** - Open the attached blend file. It's a freeze frame of an Alembic with motion vectors on points. In the end it's a point cloud with a "velocities" attribute. - Press F12 to render the point cloud with motion blur. All is fine. ![image](/attachments/6bbda0cd-643f-4605-a6e1-f2a65cfad100) - Now up the "Deformation Steps" to something > 1 ![image](/attachments/626587e2-e250-46ca-bf59-35a125b214a9) The rendering takes a lot longer and looks "wrong". - Now up the steps to e.g. 7 and re-render: crash!
Steffen Dünner added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2024-01-04 17:15:11 +01:00
Richard Antalik added
Module
Render & Cycles
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-01-04 19:40:08 +01:00
Member

Was introduced in 472cf44166 will have a look

Was introduced in 472cf44166aff98c0cf481cc063406be4b0aa79c will have a look
Member

Was introduced in 472cf44166 will have a look

Ah, misread this, this is not about the alembic part at all

> Was introduced in 472cf44166aff98c0cf481cc063406be4b0aa79c will have a look Ah, misread this, this is not about the alembic part at all

Yes, it's not really related to the new Alembic import feature but I noticed it while testing it yesterday.

Yes, it's not really related to the new Alembic import feature but I noticed it while testing it yesterday.
Member

It is the same for meshes

1 MB Step

image

3 MB Steps

image

5 MB Steps

crash

It is the same for meshes 1 MB Step ![image](/attachments/030ac559-d50b-46cc-87e7-3c210dfef3b2) 3 MB Steps ![image](/attachments/08841414-c158-4383-b6ce-37c3f86e0c3c) 5 MB Steps crash
260 KiB
236 KiB

To me it looks like the motion vectors of each step get added instead of "subdivided" by the number of steps and then added.
On the other hand, when using a motion vector attribute to add motion blur, the result should look identical no matter how many steps, because the vectors only exist for the full frame, not the subframes.

To me it looks like the motion vectors of each step get added instead of "subdivided" by the number of steps and then added. On the other hand, when using a motion vector attribute to add motion blur, the result should look identical no matter how many steps, because the vectors only exist for the full frame, not the subframes.
Philipp Oeser changed title from Rendering point clouds with motion blur can cause memory problems to Rendering multiple deformation motion blur steps with "velocity" attribute is wrong and can cause memory problems 2024-01-05 10:06:07 +01:00
Member

128eb6cbe9 states that when using the velocity attribute

/* Only export previous and next frame, we don't have any in between data. */

Other parts of code will still go over all steps and might end up accessing garbage data because of that @brecht ?

Dont we have to fill in at least some sort of data for each step?

128eb6cbe928e58dfee1c64f340fd8d663134c26 states that when using the velocity attribute >/* Only export previous and next frame, we don't have any in between data. */ Other parts of code will still go over all steps and might end up accessing garbage data because of that @brecht ? Dont we have to fill in at least some sort of data for each step?
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-10 19:19:43 +01:00

What it's supposed to do is ignore the motion steps for deformation blur, as there is nothing more than 1 step we can get out of a velocity attribute. For object transform it can still use more steps.

What it's supposed to do is ignore the motion steps for deformation blur, as there is nothing more than 1 step we can get out of a velocity attribute. For object transform it can still use more steps.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116792
No description provided.