Fix #116792: Cycles render issue velocity attribute and motion steps > 1

In this case the object transform can use more motion steps, but the
geometry needs to have its motion steps fixed since the velocity
attribute completely overrides them.